# bike-correlations

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bikes.cfg  getr2.cfg  makefile  tmux_start.bash
R/: analyses-bikes.R  analyses-trains.R  analyses.R  analyses_trains.R
data/: London-rail-lines.txt  README.md  routino-profiles.xml  routino-translations.xml  scrapeRailStations.py  station_latlons.txt  station_latlons_london.txt  station_latlons_nyc.txt  station_latlons_washingtondc.txt
hirebiker/: DESCRIPTION
hirebiker/R/: compare_models.r  fit_gaussian.r  get_bike_data.r  hirebiker-package.r  obs_dist.r  plot_vgram.r
hirebiker/man/: compare_models.Rd  fit_gaussian.Rd  get_bike_data.Rd  hirebiker.Rd  plot_vgram.Rd
python/: get_trip_counts.py  reg1.py  yes2.py
src/: Calculations.c++  Calculations.h  InOut.c++  InOut.h  RideData.c++  RideData.h  StationData.c++  StationData.h  Structures.h  TrainData.c++  TrainData.h  Utils.c++  Utils.h  Utils.py  checkStDists.py  getDist.py  getLatLons.py  getR2.c++  getR2.h  getRailDists.py  getStDists.py  main.c++  mainBikes.c++  mainBikes.h  mainStnDists.c++  mainStnDists.h  mainTrains.c++  mainTrains.h  router.py
